--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="resources/css/index.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/footer.css" type="text/css" rel="stylesheet"/>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
 
