updated for responsive hamburger menu

--- a/hunde.html
+++ b/hunde.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
-    <title>Pfötchenhilfe Belarus | Hunde</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="resources/css/header.css" type="text/css" rel="stylesheet" />
     <link href="resources/css/footer.css" type="text/css" rel="stylesheet" />
     <link href="resources/css/hunde.css" type="text/css" rel="stylesheet" />
-    <meta charset="UTF-8" />
+    <title>Pfötchenhilfe Belarus | Hunde</title>
 </head>
 
 <body>
@@ -26,11 +28,47 @@
                 </a>
             </div>
         </div>
+
+        <div class="hamburger-menu-wrapper">
+
+            <button class="hamburger">
+                <span class="menuIcon material-icons">menu</span>
+                <span class="closeIcon material-icons">close</span>
+            </button>
+            
+                <ul class="menu-mobile">
+                    <li class="menuItem">
+                        <a href="#">
+                            <div class="navlink-wrapper">Hunde</div>
+                        </a>
+                    </li>
+
+                    <li class="menuItem">
+                        <a href="#">
+                            <div class="navlink-wrapper">Helfen</div>
+                        </a>
+                    </li>
+
+                    <li class="menuItem">
+                        <a href="#">
+                            <div class="navlink-wrapper">Informationen</div>
+                        </a>
+                    </li>
+
+                    <li class="menuItem">
+                        <a href="#">
+                            <div class="navlink-wrapper">Kontakt</div>
+                        </a>
+                    </li>
+                </ul>
+
+            <script src="resources/scripts/menuToggling.js"></script>
+        </div>
         
-        <div class="navbar">
+        <nav class="menu-non-mobile">
             <ul>
                 <li class="link-tiere">
-                    <a href="#">
+                    <a href="hunde.html">
                         <div class="navlink-wrapper">Hunde</div>
                     </a>
                 </li>
@@ -53,7 +91,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </nav>
 
     </header>
 
@@ -274,8 +312,6 @@
                     </a></li>
                 </ul>
             </div>
-
-            <div class="linebarrier"></div>
 
             <div class="extra-contacts">
 
