--- a/hunde.html
+++ b/hunde.html
@@ -8,7 +8,7 @@
     <link href="resources/css/header.css" type="text/css" rel="stylesheet" />
     <link href="resources/css/footer.css" type="text/css" rel="stylesheet" />
     <link href="resources/css/hunde.css" type="text/css" rel="stylesheet" />
-    <title>Pfötchenhilfe Belarus | Hunde</title>
+    <title>Pfötchenglück Belarus e.V. | Hunde</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 
             <div class="orgname">   
                 <a class="org" href="index.html">
-                    Pfötchenhilfe Belarus
+                    Pfötchenglück Belarus e.V.
                 </a>
             </div>
         </div>
@@ -297,7 +297,7 @@
 
         <div class="wrapper-footer">
 
-            <div class="footer-nav">
+            <nav class="footer-nav">
                 <ul>
                     <li class="footer-imprint"><a href="#">
                         Impressum
@@ -311,9 +311,45 @@
                         AGB
                     </a></li>
                 </ul>
+            </nav>
+
+            <div class="extra-contacts-smaller">
+
+                <ul>
+
+                    <li><a>
+                        email@adress.com
+                    </a></li>
+
+                    <li>
+                        Tel.: 123 12345678
+                    </li>
+
+                </ul>
+
+                <ul>
+
+                    <li><a>
+                        instagram
+                    </a></li>
+
+                    <li><a>
+                        facebook
+                    </a></li>
+
+                </ul>
+
+                <ul>
+
+                    <li>
+                        DE00 0000 0000 0000 0000 00
+                    </li>
+
+                </ul>
+
             </div>
 
-            <div class="extra-contacts">
+            <div class="extra-contacts-large">
 
                 <ul>
                     <li><a>
