--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="resources/css/header.css" type="text/css" rel="stylesheet"/>   
     <link href="resources/css/index.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/footer.css" type="text/css" rel="stylesheet"/>
-    <title>Pfötchenhilfe Belarus</title>
+    <title>Pfötchenglück Belarus e.V.</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 
             <div class="orgname">   
                 <a class="org" href="#">
-                    Pfötchenhilfe Belarus
+                    Pfötchenglück Belarus e.V.
                 </a>
             </div>
         </div>
@@ -240,7 +240,7 @@
                             </tr>
                             <tr>
                                 <td>Empfänger</td>
-                                <td>Pfötchenhilfe Belarus</td>
+                                <td>Pfötchenglück Belarus e.V.</td>
                             </tr>
                             <tr>
                                 <td>IBAN</td>
@@ -306,7 +306,43 @@
                 </ul>
             </nav>
 
-            <div class="extra-contacts">
+            <div class="extra-contacts-smaller">
+
+                <ul>
+
+                    <li><a>
+                        email@adress.com
+                    </a></li>
+
+                    <li>
+                        Tel.: 123 12345678
+                    </li>
+
+                </ul>
+
+                <ul>
+
+                    <li><a>
+                        instagram
+                    </a></li>
+
+                    <li><a>
+                        facebook
+                    </a></li>
+
+                </ul>
+
+                <ul>
+
+                    <li>
+                        DE00 0000 0000 0000 0000 00
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div class="extra-contacts-large">
 
                 <ul>
                     <li><a>
