new commit for new mass of files
added standard dog site styling so far, for styling some breakpoints need to be added on the dogs site

--- a/hunde.html
+++ b/hunde.html
@@ -112,7 +112,7 @@
                         data-sex="female"
                         data-height="small"
                         data-age="young">
-                        <a href="#">Dog One</a>
+                        <a href="hunde/dog1.html">Dog One</a>
                     </div>
                 </li>
 
