--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <div class="dog-slider active" id="indexDog1">
 
                                 <div class="picture-link-wrapper">
-                                    <a href="#">
+                                    <a href="hunde/dog1.html">
                                         Dog 1
                                     </a>
                                 </div>
